@@ -3,14 +3,16 @@ Changelog
 
 4.2-dev - (unreleased)
 ----------------------
+* Bug fix: Unindex temporary objects created in portal_factory
+  [voineali #4822]
 
 4.1 - (2011-11-18)
 ------------------
-* Rerelease broken egg  
+* Rerelease broken egg
 
 4.0 - (2011-11-18)
 ------------------
-* Bug fix: use getFolderContents instead of objectValues() to retrieve 
+* Bug fix: use getFolderContents instead of objectValues() to retrieve
   children [tiberich #4418] (v0.13 backport)
 * Bug fix: Fix tests for eea.rdfmarshaller
   [ichimdav #4340]
